MPX Changelog file
== 28.11.06 ==
mi:     Bugfix: FreeCursor ignores negative refcounts.

mieq:   Bugfix: Motion notifies did overwrite DeviceMotionNotifies

Files:
	dix/cursor.c
	mi/mieq.c

== 27.11.06 ==
mi:     free allocated memory in miDCCloseScreen and in miDCInitialize in case
	of errors.
	Some copyright notices.
	misprite.c passes DeviceIntPtr around and down to DC (previously
	miCursorInfoPtr and the plain device id).
	Large cleanup in misprite.c to avoid code duplication.

Files:
	mi/midispcur.c
	mi/misprite.c
	mi/misprite.h

____________________________________________________________

mi:     mipointer.c cleanup, reducing code duplication, using MPHasCursor(),
	removing IsMPDev()

Files:
	mi/mipointer.c

____________________________________________________________

mi:     malloc checks for misprite and midispcur, code cleanup
	removed IsMPDev()

Files:
	mi/misprite.c
	mi/mipointer.c
	mi/midispcur.c
	dix/events.c


== 23.11.06 ==
mi:	closing memory leak, miPointer is freed in miPointerCloseScreen
	bugfix: uninitialized pPointer in miPointerGetPosition ifndef MPX
	adding DeviceIntPtr parameter to ScreenRec's cursor functions.
	cleanup of miPointer code to use same scheme in each function

dix:	MPHasCursor() function determines checking whether to invoke
	cursor rendering.

animcur: adding DeviceIntPtr parameter to cursor functions but animcur relies
	 on the core pointer right now.

xfixes: adding DeviceIntPtr parameter to cursor functions but xfixes relies on
	the core pointer right now.

rac:	adding DeviceIntPtr parameter to cursor functions but RAC relies on
	the core pointer right now.

ramdac:	adding DeviceIntPtr parameter to cursor functions but ramdac relies on
	the core pointer right now.

Files:
	mi/mipointer.c
	mi/mipointer.h
	mi/micursor.c
	mi/mi.h
	mi/mieq.c
	include/cursor.h
	include/inputstr.h
	include/scrnintstr.h
	include/dix.h
	dix/events.c
	dix/cursor.c
	Xext/xtest.c
	render/animcur.c
	xfixes/cursor.c
	XTrap/xtrapddmi.c